# GeoChess

./: .gitignore  AGENTS.md  DESIGN.md  README.md  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
server/: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  sst-env.d.ts  sst.config.ts  sst.pyi
server/db/: schema.sql
server/db/migrations/: 20260628013427_create_users.sql  20260629000000_create_ai_games.sql  20260712000000_add_user_country.sql  20260713000000_add_ai_game_history.sql  20260713000001_split_ai_game_totals_by_difficulty.sql  20260713000002_create_with_friends_games.sql  20260718171208_initial_schema.sql  20260718204659_drop_ai_game_moves.sql  20260718205756_drop_with_friends_game_moves.sql  20260718210000_drop_with_friends_game_room_key.sql  20260718220000_archive_with_friends_games.sql
server/openapi/: openapi.yml
server/openapi/components/schemas/: ai-game-move.yml  ai-game.yml  create-ai-game-request.yml  (+13 more)
server/src/core/: auth.py  countries.py  db.py  events.py  firebase.py  http.py  logger.py  secret.py
server/src/data/: countries.json
server/src/features/: __init__.py
server/src/jobs/: cleanup_expired_ai_games.py  cleanup_expired_with_friends_games.py  process_ai_game_move.py  process_ai_game_timeout.py  process_with_friends_game_start.py  process_with_friends_game_timeout.py
server/tests/core/: test_auth.py  test_http.py  test_secret.py
server/tests/factories/: http_events.py
server/tests/jobs/: test_cleanup_expired_with_friends_games.py  test_process_ai_game_move.py  test_process_ai_game_timeout.py
(+260 files in other folders)
